# rust-ets

./: .gitignore  Cargo.toml
data/: x7ets.txt
experiments/: xp-ets-ik.rs  xp-ets-smm.rs  xp-ets.rs  xp-integration.rs  xp-null-space.rs
notebooks/: jacobian.ipynb
src/: ETS.rs  SE3.rs  ets.rs  lib.rs  linear_algebra.rs  main.rs  se3.rs  utils.rs
