[package]
name = "ets"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
nalgebra = "0.33.0"
rand = "0.8.5"

[[bin]]
name = "xp-ets"
path = "experiments/xp-ets.rs"

[[bin]]
name = "xp-ets-ik"
path = "experiments/xp-ets-ik.rs"

[[bin]]
name = "xp-ets-smm"
path = "experiments/xp-ets-smm.rs"


[[bin]]
name = "xp-null-space"
path = "experiments/xp-null-space.rs"

[[bin]]
name = "xp-ets-jacobian-null-space"
path = "experiments/xp-ets-jacobian-null-space.rs"
